--- a/ParqueoAdministrator.csproj
+++ b/ParqueoAdministrator.csproj
@@ -96,5 +96,8 @@
       <Name>proyectoLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
